# irods_capability_storage_tiering

./: CMakeLists.txt  README.md  irods_consortium_continuous_integration_build_hook.py  storage_tiering.cpp
include/irods/private/storage_tiering/: proxy_connection.hpp
packaging/: test_plugin_unified_storage_tiering.py
src/: configuration.cpp  data_verification_utilities.cpp  main.cpp  storage_tiering.cpp
test/: CMakeLists.txt
test/stream_test/: CMakeLists.txt  irods_test_multi1247_parallel_transfer_write_object.cpp  irods_test_read_object.cpp
