set(_IRODS_TEST_EXECUTABLES_BUILD_DOCSTR "Build and package executables made for testing.")

# Building the test executables is enabled by default for Debug builds.
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
	set(_IRODS_TEST_EXECUTABLES_BUILD_DEFAULT ON)
else()
	set(_IRODS_TEST_EXECUTABLES_BUILD_DEFAULT OFF)
endif()

set(IRODS_TEST_EXECUTABLES_BUILD ${_IRODS_TEST_EXECUTABLES_BUILD_DEFAULT} CACHE BOOL "${_IRODS_TEST_EXECUTABLES_BUILD_DOCSTR}")

message("CMAKE_BUILD_TYPE is ${CMAKE_BUILD_TYPE}")
message("_IRODS_TEST_EXECUTABLES_BUILD_DEFAULT is ${_IRODS_TEST_EXECUTABLES_BUILD_DEFAULT}")
message("IRODS_TEST_EXECUTABLES_BUILD is ${IRODS_TEST_EXECUTABLES_BUILD}")

if (IRODS_TEST_EXECUTABLES_BUILD)
	add_subdirectory(stream_test)
endif()
